sample-init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: initcontainerpod
spec:
  containers:
  - name: appcontainer    #after initcontainer closed successfully, app container starts
    image: busybox
    command: ['sh', '-c', 'echo The app is ruuning! && sleep 3600']
