sample-pod.yaml
apiVersion: v1
kind: Namespace 
metadata:
  name: development
---
apiVersion: v1
kind: Pod
meatadata:
  namespace: development
  name: firstpod
  annotations:
    owner: "owner-name"
    notification-email: "owner@example.com"
    releasedate: "01.01.2022"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: frontend
    tier: frontend
    mycluster.local/team: team1
spec:
  containers:
  - name: nginx
    image: nginx:latest
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
    volumeMounts:  # vol is mounted under "volumeMounts"
    - name: cache-vol # name of vol-type
      mountPath: /tmp/log   # "mountPath" is path in container 
  volumes:
  - name: cache-vol 
    emptyDir: {} # vol-type "emptyDir"
    resources:
      requests:
        memory: "64M"
        cpu: "0.25"
      limits:
        memory: "256M"
        cpu: "0.5"
    ports:
    - containerPort: 80
  nodeSelector:
    hddtype: ssd
